--- a/blogs/blogs-styles.css
+++ b/blogs/blogs-styles.css
@@ -603,24 +603,29 @@ h4 {
 }
 
 .footer-box .footer .footer-logo {
+  justify-self: flex-start;
+}
+
+.footer-box .footer .footer-logo a {
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
-  grid-area: logo;
+  text-decoration: none;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: logo;
 }
 
-.footer-box .footer .footer-logo img {
+.footer-box .footer .footer-logo a img {
   width: 75px;
 }
 
-.footer-box .footer .footer-logo p {
-  margin-left: 3%;
+.footer-box .footer .footer-logo a p {
+  margin-left: 15px;
   color: var(--Blanco);
   font-size: 30px;
 }
