--- a/Code/styles.scss
+++ b/Code/styles.scss
@@ -1,5 +1,5 @@
 
 /*== ROOT ==*/
 
-@import './node/Var-styles', './node/mainpage','./node/nav-menu', './node/mediaQueries', './node/footer-styles' ;
+@import './node/Var-styles', './node/mainpage','./node/nav-menu', './node/footer-styles', './node/mediaQueries' ;
 /**/
